Bug 244135 - only black video images recieves on yahoo messenger on windows pc
Summary: only black video images recieves on yahoo messenger on windows pc
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: Yahoo Plugin (other bugs)
Version First Reported In: 1.0.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-10 16:31 UTC by rostacs
Modified: 2011-03-01 15:06 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description rostacs 2010-07-10 16:31:48 UTC
Version:           1.0.0 (using KDE 4.4.2) 
OS:                Linux

Windows based box, receives only black video images on yahoo messenger video chat.

Reproducible: Always




OS: Linux (x86_64) release 2.6.32-23-generic
Compiler: cc
Comment 1 rostacs 2010-07-11 08:36:50 UTC
I try it on different pc same result. The receiving side only recieves black video images but I can see my video locally.
Comment 2 Frank Schaefer 2010-09-20 20:04:50 UTC
The video device code is ok, so changing component to "yahoo plugin".
Comment 3 cristi.posoiu 2011-01-15 12:53:46 UTC
If possible, check the error logs on receiving part and see if you can't find something about missing 'jasper' program. On linux that is ~/.xsession-errors, don't know where they're located on windows. You might also have to run kdebugdialog and enable logging for Yahoo raw data.

Currently jasper program is needed to convert yahoo webcam images to something suitable. Hopefully a newer version will try to use the jasper libraries directly. There is a little bit of a discussion if that jasper library should be mandatory or not on windows boxes.

Ah, I think that you could try for presence of jasper program, on the windows box, by trying a 'Invite to view your webcam'
Comment 4 Raphael Kubo da Costa 2011-01-29 14:09:46 UTC
SVN commit 1217895 by rkcosta:

Use libjasper instead of relying on the external jasper program.

From the original ReviewBoard description:

  I saw that for yahoo - webcam images are converted by running an
  external program. Personally I am not ok with this since running an
  external program every 0.X seconds is a bit expensive. Also, not to
  mention using disk files (at least pushing directly into the program
  and reading its output would have been better).

  Also - I saw that inviteWebcam action was checking for presence of
  jasper program - but requestWebcam should also have done that. Not
  to mention that if a yahoo contact just invites you to see his cam,
  you might get a feedback of missing program after accepting to
  invitation. Not necessarily a big deal, though.

Original patch by Cristi Posoiu <cristi.posoiu AT gmail>, thanks!

REVIEW: 6312
BUG: 244135



 M  +4 -1      CMakeLists.txt  
 M  +3 -1      libkyahoo/CMakeLists.txt  
 A             libkyahoo/webcamimgformat.cpp   [License: LGPL (v2+)]
 A             libkyahoo/webcamimgformat.h   [License: LGPL (v2+)]
 M  +8 -30     libkyahoo/webcamtask.cpp  
 M  +1 -15     yahoocontact.cpp  
 M  +10 -35    yahoowebcam.cpp  
 M  +0 -3      yahoowebcam.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1217895
Comment 5 Raphael Kubo da Costa 2011-01-29 14:13:26 UTC
SVN commit 1217896 by rkcosta:

Use libjasper instead of relying on the external jasper program.

From the original ReviewBoard description:

  I saw that for yahoo - webcam images are converted by running an
  external program. Personally I am not ok with this since running an
  external program every 0.X seconds is a bit expensive. Also, not to
  mention using disk files (at least pushing directly into the program
  and reading its output would have been better).

  Also - I saw that inviteWebcam action was checking for presence of
  jasper program - but requestWebcam should also have done that. Not
  to mention that if a yahoo contact just invites you to see his cam,
  you might get a feedback of missing program after accepting to
  invitation. Not necessarily a big deal, though.

Original patch by Cristi Posoiu <cristi.posoiu AT gmail>, thanks!

This commit is a forward-port of r1217895 to the 4.6 branch.

REVIEW: 6312
CCBUG: 244135



 M  +4 -1      CMakeLists.txt  
 M  +3 -1      libkyahoo/CMakeLists.txt  
 A             libkyahoo/webcamimgformat.cpp   [License: LGPL (v2+)]
 A             libkyahoo/webcamimgformat.h   [License: LGPL (v2+)]
 M  +8 -30     libkyahoo/webcamtask.cpp  
 M  +1 -15     yahoocontact.cpp  
 M  +10 -35    yahoowebcam.cpp  
 M  +0 -3      yahoowebcam.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1217896
Comment 6 Raphael Kubo da Costa 2011-01-29 14:14:43 UTC
rostacs, can you update to 4.6.1 when it's released and check if your issue has been solved? Everything indicates it has, but if you still experience it, please reopen the report.