Use libjasper instead of relying on the external jasper program.

From the original ReviewBoard description:

  I saw that for yahoo - webcam images are converted by running an
  external program. Personally I am not ok with this since running an
  external program every 0.X seconds is a bit expensive. Also, not to
  mention using disk files (at least pushing directly into the program
  and reading its output would have been better).

  Also - I saw that inviteWebcam action was checking for presence of
  jasper program - but requestWebcam should also have done that. Not
  to mention that if a yahoo contact just invites you to see his cam,
  you might get a feedback of missing program after accepting to
  invitation. Not necessarily a big deal, though.

Original patch by Cristi Posoiu <cristi.posoiu AT gmail>, thanks!

REVIEW: 6312
BUG: 244135


svn path=/branches/KDE/4.6/kdenetwork/kopete/; revision=1217895